--- a/package/fiko.css
+++ b/package/fiko.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * FIKO 🐸 v0.7.3 (https://fiko.rokma.rocks)
+ * FIKO 🐸 v0.7.4 (https://fiko.rokma.rocks)
  * 2024 ALMOST CLASSLESS BLACK & WHITE CSS FRAMEWORK LIBRARY
  * Copyright 2023 Toybreaker
  * MIT License | https: //github.com/toybreaker/fiko
@@ -166,6 +166,8 @@
 
 /* 🐲 ROOT */
 @layer root {
+  /* root is devided in 2 sections: un the first one all variables which change with light/dark theme, the second one for thos variables which wont change. */
+
   :root {
     /* ICONS FIRST, cos there're reffered in [data-theme...]  */
     --icon-chevron-black: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='black' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
@@ -217,7 +219,7 @@
     --spaceLR: 3.3svw;
     --spaceTB: 1.8svh;
     --radius: 1svw;
-    --line-height: 1.15;
+    --line-height: 1.33;
     /* NOTE: Maybe make DERIVED?: */
     --gap: calc((3.3svw + 1.8svh) / 2);
 
@@ -349,6 +351,9 @@
     font-size: var(--font-size);
     line-height: var(--line-height);
     font-family: var(--font-family);
+
+    text-wrap: balance;
+    max-width: 40ch;
   }
 
   h1 {
@@ -512,8 +517,8 @@
   code,
   kbd {
     display: inline;
-    padding: calc(var(--spaceTB) / 2)
-      calc(var(--spaceLR) / 2);
+    padding: calc(var(--spaceLR) / 12)
+      calc(var(--spaceLR) / 6);
   }
 
   pre {
@@ -1873,6 +1878,18 @@
 
 /* 🐲 CLASSES */
 @layer classes {
+  .o,
+  .centered,
+  .center,
+  .centre {
+    text-align: center !important;
+  }
+
+  .ob {
+    display: block;
+    text-align: center !important;
+  }
+
   .border {
     border: var(--border-size) solid var(--curTXT50);
     border-radius: var(--radius);
@@ -1885,11 +1902,11 @@
   .invert {
     filter: invert(100%);
 
-    [data-theme='light'] & {
-      color: var(--curBG);
-      background-color: var(--curTXT);
+    .revert_layer_color {
+      color: revert-layer;
     }
   }
+
   .alfa_BG {
     @layer root {
       --alpha: 0.5;
